@@ -3,6 +3,8 @@
 ## 2.4 - Unreleased
 - Deprecation warning if using Chafa < 1.10
 - "open" now accept integer as parameters to open links (suggested by Matthieu Rakotojaona)
+- netcache: use client-certificate when going to a url like gemini://username@site.net (by Bert Livens)
+- offpunk/netcache: added the "cert" command to list and create client certificates (Bert Livens)
 
 ## 2.3 - June 29th 2024
 - Wayland clipboard support through wl-clipboard (new suggested dependency)
